--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.3",
+    "firebase": "^10.12.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
